--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="./src/assets/img/favicon.png" rel="icon">
-  <link href="./src/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="src/assets/img/favicon.png" rel="icon">
+  <link href="src/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -14,15 +14,15 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="./src/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="./src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="./src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="./src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="./src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="./src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="src/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="./src/assets/css/style.css" rel="stylesheet">
+  <link href="src/assets/css/style.css" rel="stylesheet">
 
   <title>Vite + Vue</title>
 
