--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="src/assets/css" rel="stylesheet">
+  <link href="src/assets/css/style.css" rel="stylesheet">
 
   <title>Vite + Vue</title>
 
