Se realizaron cambios ultimos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Template Main CSS File -->
   <link href="/src/assets/css/style.css" rel="stylesheet">
 
-  <title>Vite + Vue</title>
+  <title>Sky Burguer - Portfolio</title>
 
   <script type="module" src="/src/main.js"></script>
 
