Se realizaron cambios ultimos para presentacion

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/src/assets/img/favicon.png" rel="icon">
   <link href="/src/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="public/lightbox2/dist/css/lightbox.css" rel="stylesheet" />
 
   <!-- Google Fonts -->
   <link
@@ -27,11 +28,13 @@
   <title>Sky Burger - Portfolio</title>
 
   <script type="module" src="/src/main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
 
 <body>
   <div id="app"></div>
+  <script type="module" src="public/lightbox2/dist/js/lightbox.js"></script>
 </body>
 
 </html>
