--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Template Main CSS File -->
   <link href="/src/assets/css/style.css" rel="stylesheet">
 
-  <title>Sky Burger - Portfolio</title>
+  <title>Burger Blockade - Portfolio</title>
 
   <script type="module" src="/src/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
